--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Sample "Hello, World" Application</title>
+    <title>Aditi Narvekar</title>
   </head>
-  <body bgcolor=white>
+  <body bgcolor=black>
 
     <table border="0" cellpadding="10">
       <tr>
@@ -10,17 +10,12 @@
           <img src="images/springsource.png">
         </td>
         <td>
-          <h1>Sample "Hello, World" Application</h1>
+          <h1>Aditi Narvekar</h1>
         </td>
       </tr>
     </table>
 
-    <p>This is the home page for the HelloWorld Web application. </p>
-    <p>To prove that they work, you can execute either of the following links:
-    <ul>
-      <li>To a <a href="hello.jsp">JSP page</a>.
-      <li>To a <a href="hello">servlet</a>.
-    </ul>
+    <p>This is the home page. </p
 
   </body>
 </html>
