--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Aditi Narvekar</title>
   </head>
-  <body bgcolor=black>
+  <body bgcolor=white>
 
     <table border="0" cellpadding="10">
       <tr>
