--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <table border="0" cellpadding="10">
       <tr>
         <td>
-          <img src="images/springsource.png">
+          <img src="Aditi photo.png">
         </td>
         <td>
           <h1>Aditi Narvekar</h1>
