--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <html>
-  <head>
+<head>
     <title>Aditi Narvekar</title>
-  </head>
-  <body bgcolor=white>
-
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <ul class="navbar">
+        <li><a href="index.html">Home page</a>
+        <li><a>Resume</a>
+        <li><a>Projects</a>
+    </ul>
     <table border="0" cellpadding="10">
-      <tr>
-        <td>
-          <img src="Aditi photo.jpg">
-        </td>
-        <td>
-          <h1>Aditi Narvekar</h1>
-        </td>
-      </tr>
+        <tr>
+            <td>
+                <h1>Aditi Narvekar</h1>
+            </td>
+            <td>
+                <img src="Aditi photo.jpg">
+            </td>
+        </tr>
     </table>
 
-    <p>This is the home page. </p
+    <p>This is the home page.</p>
 
-  </body>
+</body>
 </html>
