--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <ul class="navbar">
         <li><a href="index.html">Home page</a>
-        <li><a>Resume</a>
+        <li><a href="Aditi Narvekar Resume.pdf">Resume</a>
         <li><a>Projects</a>
     </ul>
     <table border="0" cellpadding="10">
