--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#coolshit">Cool shit i did</a>
+            <a class="nav-link js-scroll-trigger" href="#coolshit">Cool stuff i did</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -132,7 +132,7 @@
       <hr class="m-0">
        <section class="resume-section p-3 p-lg-5 d-flex d-column" id="coolshit">
         <div class="my-auto">
-        	<h2 class="mb-5">Cool shit I did</h2>
+        	<h2 class="mb-5">Cool stuff I did</h2>
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Autonomous car</h3>
